--- a/ClientOne/nbproject/private/private.properties
+++ b/ClientOne/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\YD DEHIGAMA\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+user.properties.file=C:\\Users\\Nishan Gunawardena\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
