Object passing from client to server is done.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /MainServer/nbproject/private/
 /MainServer/build/
 /MainServer/dist/
+/Student/nbproject/private/
+/Student/build/
+/Student/dist/
+/ClientOne/dist/
