Student Project removed and include a new project called middleware.

--- a/MainServer/nbproject/project.properties
+++ b/MainServer/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.jar=${dist.dir}/MainServer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ClientOne.jar=..\\ClientOne\\dist\\ClientOne.jar
+file.reference.Middleware.jar=..\\Middleware\\dist\\Middleware.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ClientOne.jar}
+    ${file.reference.Middleware.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
