--- a/ClientOne/nbproject/project.properties
+++ b/ClientOne/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/ClientOne.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Middleware.jar=..\\Middleware\\dist\\Middleware.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Middleware.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
